// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle multi line list item 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 73,
                  "line": 1,
                  "offset": 72,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "Apple is an American multinational technology company headquartered in",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 73,
              "line": 1,
              "offset": 72,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 73,
          "line": 1,
          "offset": 72,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 78,
              "line": 2,
              "offset": 150,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 73,
            },
          },
          "type": "text.plain",
          "value": "Cupertino, California that designs, develops, and sells consumer electronics,",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 151,
            },
            "start": Object {
              "column": 78,
              "line": 2,
              "offset": 150,
            },
          },
          "type": "text.plain",
          "value": " ",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 40,
              "line": 3,
              "offset": 190,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 151,
            },
          },
          "type": "text.plain",
          "value": "computer software, and online services.",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 4,
          "offset": 191,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 73,
        },
      },
      "type": "paragraph",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 192,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 191,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 4,
                  "offset": 199,
                },
                "start": Object {
                  "column": 3,
                  "line": 4,
                  "offset": 193,
                },
              },
              "type": "text.plain",
              "value": "Orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 4,
              "offset": 199,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 191,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 5,
                  "offset": 201,
                },
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 200,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 5,
                  "offset": 208,
                },
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 202,
                },
              },
              "type": "text.plain",
              "value": "Banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 5,
              "offset": 208,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 200,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 5,
          "offset": 208,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 191,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 5,
      "offset": 208,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`can handle nested list 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": true,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "text.plain",
              "value": "apple",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 2,
                  "offset": 10,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 9,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 2,
                  "offset": 17,
                },
                "start": Object {
                  "column": 3,
                  "line": 2,
                  "offset": 11,
                },
              },
              "type": "text.plain",
              "value": "iPhone",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 2,
              "offset": 17,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 9,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 3,
                  "offset": 19,
                },
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 18,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 6,
                  "line": 3,
                  "offset": 23,
                },
                "start": Object {
                  "column": 3,
                  "line": 3,
                  "offset": 20,
                },
              },
              "type": "text.plain",
              "value": "Mac",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 3,
              "offset": 23,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 18,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": true,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 3,
                  "line": 4,
                  "offset": 26,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 24,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 4,
                  "offset": 33,
                },
                "start": Object {
                  "column": 4,
                  "line": 4,
                  "offset": 27,
                },
              },
              "type": "text.plain",
              "value": "banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 4,
              "offset": 33,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 24,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 5,
                  "offset": 35,
                },
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 34,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 5,
                  "offset": 42,
                },
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 36,
                },
              },
              "type": "text.plain",
              "value": "orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 5,
              "offset": 42,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 34,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": true,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 5,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 5,
      "offset": 42,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle descriptive list 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": Object {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "type": "text.plain",
              "value": "it's apple",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "tag": "Apple",
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 2,
                  "offset": 23,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 22,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 2,
                  "offset": 30,
                },
                "start": Object {
                  "column": 3,
                  "line": 2,
                  "offset": 24,
                },
              },
              "type": "text.plain",
              "value": "Orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 2,
              "offset": 30,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 22,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 2,
          "offset": 30,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle descriptive list 2`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "Orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 2,
                  "offset": 10,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 9,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 22,
                  "line": 2,
                  "offset": 30,
                },
                "start": Object {
                  "column": 12,
                  "line": 2,
                  "offset": 20,
                },
              },
              "type": "text.plain",
              "value": "it's apple",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 22,
              "line": 2,
              "offset": 30,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 9,
            },
          },
          "tag": "Apple",
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 22,
          "line": 2,
          "offset": 30,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 22,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle list broken by empty line 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 73,
                  "line": 1,
                  "offset": 72,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "Apple is an American multinational technology company headquartered in",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 73,
              "line": 1,
              "offset": 72,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 73,
          "line": 1,
          "offset": 72,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 80,
              "line": 2,
              "offset": 152,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 75,
            },
          },
          "type": "text.plain",
          "value": "Cupertino, California that designs, develops, and sells consumer electronics,",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 4,
          "offset": 154,
        },
        "start": Object {
          "column": 3,
          "line": 2,
          "offset": 75,
        },
      },
      "type": "paragraph",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 42,
              "line": 4,
              "offset": 195,
            },
            "start": Object {
              "column": 3,
              "line": 4,
              "offset": 156,
            },
          },
          "type": "text.plain",
          "value": "computer software, and online services.",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 5,
          "offset": 196,
        },
        "start": Object {
          "column": 3,
          "line": 4,
          "offset": 156,
        },
      },
      "type": "paragraph",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 5,
                  "offset": 197,
                },
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 196,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 5,
                  "offset": 204,
                },
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 198,
                },
              },
              "type": "text.plain",
              "value": "Orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 5,
              "offset": 204,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 196,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 6,
                  "offset": 206,
                },
                "start": Object {
                  "column": 1,
                  "line": 6,
                  "offset": 205,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 6,
                  "offset": 213,
                },
                "start": Object {
                  "column": 3,
                  "line": 6,
                  "offset": 207,
                },
              },
              "type": "text.plain",
              "value": "Banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 6,
              "offset": 213,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 205,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 6,
          "offset": 213,
        },
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 196,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 6,
      "offset": 213,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle list broken by indent 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 73,
                  "line": 1,
                  "offset": 72,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "Apple is an American multinational technology company headquartered in",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 73,
              "line": 1,
              "offset": 72,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 73,
          "line": 1,
          "offset": 72,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 78,
              "line": 2,
              "offset": 150,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 73,
            },
          },
          "type": "text.plain",
          "value": "Cupertino, California that designs, develops, and sells consumer electronics,",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 151,
            },
            "start": Object {
              "column": 78,
              "line": 2,
              "offset": 150,
            },
          },
          "type": "text.plain",
          "value": " ",
        },
        Object {
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 42,
              "line": 3,
              "offset": 192,
            },
            "start": Object {
              "column": 3,
              "line": 3,
              "offset": 153,
            },
          },
          "type": "text.plain",
          "value": "computer software, and online services.",
        },
      ],
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 1,
          "line": 4,
          "offset": 193,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 73,
        },
      },
      "type": "paragraph",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 4,
                  "offset": 194,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 193,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 4,
                  "offset": 201,
                },
                "start": Object {
                  "column": 3,
                  "line": 4,
                  "offset": 195,
                },
              },
              "type": "text.plain",
              "value": "Orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 4,
              "offset": 201,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 193,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 5,
                  "offset": 203,
                },
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 202,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 5,
                  "offset": 210,
                },
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 204,
                },
              },
              "type": "text.plain",
              "value": "Banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 5,
              "offset": 210,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 202,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 5,
          "offset": 210,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 193,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 5,
      "offset": 210,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle ordered list 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": true,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "text.plain",
              "value": "apple",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": true,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 3,
                  "line": 2,
                  "offset": 11,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 9,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 2,
                  "offset": 18,
                },
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 12,
                },
              },
              "type": "text.plain",
              "value": "banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 2,
              "offset": 18,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 9,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 3,
                  "offset": 20,
                },
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 19,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 3,
                  "offset": 27,
                },
                "start": Object {
                  "column": 3,
                  "line": 3,
                  "offset": 21,
                },
              },
              "type": "text.plain",
              "value": "orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 3,
              "offset": 27,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 19,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": true,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 3,
          "offset": 27,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 3,
      "offset": 27,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;

exports[`could handle unordered list 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": Object {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text.plain",
              "value": "apple",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 2,
                  "offset": 9,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 8,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 2,
                  "offset": 16,
                },
                "start": Object {
                  "column": 3,
                  "line": 2,
                  "offset": 10,
                },
              },
              "type": "text.plain",
              "value": "banana",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 2,
              "offset": 16,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "list.item",
        },
        Object {
          "children": Array [
            Object {
              "indent": 0,
              "ordered": false,
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 2,
                  "line": 3,
                  "offset": 18,
                },
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 17,
                },
              },
              "type": "list.item.bullet",
            },
            Object {
              "parent": [Circular],
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 3,
                  "offset": 25,
                },
                "start": Object {
                  "column": 3,
                  "line": 3,
                  "offset": 19,
                },
              },
              "type": "text.plain",
              "value": "orange",
            },
          ],
          "indent": 0,
          "parent": [Circular],
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 3,
              "offset": 25,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 17,
            },
          },
          "type": "list.item",
        },
      ],
      "indent": 0,
      "ordered": false,
      "parent": [Circular],
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 3,
          "offset": 25,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 9,
      "line": 3,
      "offset": 25,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "properties": Object {},
  "type": "document",
}
`;
